# compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package.json  pnpm-lock.yaml
benchmark/: browser.js  index.html  node.js  package.json  pnpm-lock.yaml  source.md  test.md
core/: Cargo.toml
core/src/: block.rs  codegen.rs  document.rs  inline.rs  input.rs  jsx_lexer.rs  jsx_parser.rs  lexer.rs  lib.rs  md_lexer.rs
napi/: Cargo.toml  index.d.ts  index.js  napi.darwin-x64.node  package.json  pnpm-lock.yaml
napi/src/: lib.rs
src/: _js_lexer.rs  ast.rs  block.rs  byte.rs  codegen.rs  document.rs  inline.rs  input.rs  interrupt.rs  js_lexer.rs  js_parser.rs  jsx.rs  jsx_lexer.rs  jsx_parser.rs  jsx_test.rs  lexer.rs  lexer_base.rs  lexer_test.rs  lib.rs  line.rs  link_definition.rs  mdx.pest  module.rs  parse.rs  parser.rs  puncttable.rs  punctuation.rs  raw.rs  rule.rs  scan.rs  scanner.rs  token.rs  tokenizer.rs  tree.rs
src/_block/: atx_heading.rs  indented_code.rs  list.rs  parse.rs  setext_heading.rs
src/block/: atx_heading.rs  block_quote.rs  document.rs  fenced_code.rs  indented_code.rs  link_definition.rs  list.rs  mod.rs  paragraph.rs  parse.rs  setext_heading.rs  table.rs  thematic_break.rs
src/inline/: inline_jsx.rs  parse.rs
src/snapshots/: compiler__block__parse_block.snap.new  compiler__js_lexer__expression_parse.snap.new  compiler__jsx__tests__jsx_parse.snap  compiler__jsx_parser__parse_import_export.snap.new  compiler__jsx_parser__parse_jsx_element.snap.new  compiler__jsx_test__jsx_parse.snap.new  compiler__lexer__tests__atx_heading.snap  compiler__lexer__tests__fenced_code.snap  compiler__lexer__tests__indented_code.snap  compiler__lexer__tests__lexer_parse.snap  (+5 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+31 files in other folders)
