[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
lazy_static = "1.4.0"
regex = "1.5.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false