[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"

[dev-dependencies]
insta = "1.8.0"
serde = { version = "1.0", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false